Подключение стилей через единый файл
Все стили в одном файле + удаление лишнего.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <title>БГТУ &#124; REACT.JS</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="libraries/background/style.css">
     <link rel="stylesheet" type="text/css" href="css/chapters.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <style>@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");</style>
 </head>
 
 <body>
