--- a/info/cmd_install/index.html
+++ b/info/cmd_install/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>СПРАВОЧНИК &#124; REACT.JS</title>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/content.css">
+    <link rel="stylesheet" href="../../css/general.css">
     <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../libraries/font-awesome/css/font-awesome.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../../libraries/header.js"></script>
-    <link rel="stylesheet" href="../../libraries/prism.css">
     <script src="../../libraries/prism.js"></script>
 </head>
 
@@ -70,12 +67,8 @@
         <p>Так или иначе, вы попадете в Microsoft Store на страницу приложения Windows Terminal (Preview). Здесь нужно нажать на кнопку «Install» и дождаться завершения установки приложения.</p>
         <img src="win_terminal4.png" alt="Windows Terminal Web-Store Download">
         <p>После установки можно сразу начинать пользоваться Windows Terminal, перезагрузка компьютера не требуется. Чтобы запустить приложение нужно нажать на кнопку «Launch» в Microsoft Store или воспользоваться поиском в меню «Пуск».</p>
-        <div class="block-info-btn">
-           <button class="info-btn" onclick="window.location.href = '../../index.html';"><i class="fa fa-home" aria-hidden="true"></i><span>_</span>ГЛАВНАЯ</button>
-           <button class="info-btn" onclick="window.location.href = '../../info.html';">Справочник<span>_</span><i class="fa fa-question-circle" aria-hidden="true"></i></button>
-        </div>
     </div>
-    
+
 </body>
 
 </html>
