--- a/info/node_js_install/index.html
+++ b/info/node_js_install/index.html
@@ -5,13 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>СПРАВОЧНИК &#124; REACT.JS</title>
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/content.css">
+    <link rel="stylesheet" href="../../css/general.css">
     <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../libraries/font-awesome/css/font-awesome.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../../libraries/header.js"></script>
-    <link rel="stylesheet" href="../../libraries/prism.css">
     <script src="../../libraries/prism.js"></script>
 </head>
 
@@ -57,10 +54,6 @@
         <p>Результат выполнения команд:</p>
         <img src="node_js2.svg" alt="Результат выполнения консоли">
         <p>Если результат выполнения команд в консоли схож с данным, то вы всё сделали правильно, Node.js установлен и функционирует правильно.</p>
-        <div class="block-info-btn">
-           <button class="info-btn" onclick="window.location.href = '../../index.html';"><i class="fa fa-home" aria-hidden="true"></i><span>_</span>ГЛАВНАЯ</button>
-           <button class="info-btn" onclick="window.location.href = '../../info.html';">Справочник<span>_</span><i class="fa fa-question-circle" aria-hidden="true"></i></button>
-        </div>
     </div>
 
 </body>
