--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -6,16 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
     <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/content.css">
-    <link rel="stylesheet" href="../../libraries/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../../css/general.css">
     <!--React.js-->
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <!--Prism.js Демо для кода-->
-    <link rel="stylesheet" href="../../libraries/prism.css">
-    <script src="../../libraries/prism.js"></script>
+        <script src="../../libraries/prism.js"></script>
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../../libraries/header.js"></script>
@@ -51,7 +47,7 @@
     <div id="delimiter"></div>
 
     <div class="content">
-
+    <p class="section">Лабораторная работа №1</p>
         <p class="section">Задание 1</p>
         
         <p>Выберите и, при необходимости, установите рабочее окружение для разработки с React. В первых лабораторных работах для этого можно использовать любой текстовый редактор. В дальнейшем вам понадобится Node.JS.</p>
@@ -136,9 +132,6 @@
         <p>Добавьте нотации (подписи) шахматной доски, используя отдельные элементы.</p>
 
         <p>Доп. задание: Реализуйте нотации с использованием циклов и отдельных функций.</p>
-
-        <div class="lr-btn">
-           <button class="atuin-btn" onclick="window.location.href = '../lab02/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
         </div>
     </div>
 
