--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
     <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/content.css">
-    <link rel="stylesheet" href="../../libraries/prism.css">
-    <link rel="stylesheet" href="../../libraries/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../../css/general.css">
     <!--React.js-->
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <!--Prism.js Демо для кода-->
     <script src="../../libraries/prism.js"></script>
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -51,18 +47,13 @@
     <div id="delimiter"></div>
 
     <div class="content">
-
+        <p class="section">Лабораторная работа №2</p>
         <div class="section">Задание 1</div>
 
         <p>Создайте компонент-класс <mark>Clock</mark>, показывающий текущее время. У компонента должна быть возможность указать атрибуты <mark>format</mark> (12 или 24 часа, по умолчанию — 24) и <mark>timezone</mark> (часовой пояс, по умолчанию — часовой пояс пользователя). Например, код <mark>&lt;Clock format='24' timezone='+3:00' /></mark> должен создать часы, которые показывают минское время в 24-часовом формате, а код <mark>&lt;Clock format='12' timezone='-5:00' /></mark> — часы, которые показывают нью-йоркское время в 12-часовом формате.</p>
         <p>Учтите, что не во всех часовых поясах время отличается от гринвичского на целое количество часов. Например, Индия использует время UTC+5:30.</p>
         <p>Переход на летнее время не учитывать.</p>
         <hr>
-
-        <div class="lr-btn">
-           <button class="atuin-btn" onclick="window.location.href = '../lab01/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
-           <button class="atuin-btn" onclick="window.location.href = '../lab03/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
-        </div>
     </div>
 
 </body>
