--- a/labs/task-bank.html
+++ b/labs/task-bank.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
     <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/content.css">
-    <link rel="stylesheet" href="../libraries/prism.css">
-    <link rel="stylesheet" href="../libraries/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../css/general.css">
     <!--React.js-->
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <!--Prism.js Демо для кода-->
-    <script src="../libraries/prism.js"></script>
-    <script type="text/babel" src="script.js"></script>
+        <script src="../libraries/prism.js"></script>
     <!--jQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="../libraries/header.js"></script>
